[package]
name = "tree-tags"
version = "0.1.0"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
dirs = "1.0.2"
ignore = "0.4.4"
libloading = "0.5"
rusqlite = "0.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tree-sitter = "0.3.1"

[patch.crates-io]
tree-sitter = { path = "../rust-tree-sitter" }
